ISPN-3242 ISPN-3284 Enforce building against JDK7 and drop useless dependencies
Build against JDK7 but verify that we are compatible with JDK6.
Run testsuite against JDK6 if the JAVA_HOME_16 environment variable is set
Drop useless dependencies which we had to keep around because of http://bugs.sun.com/view_bug.do?bug_id=6550655
Other minor pom cleanups