@@ -113,7 +113,7 @@
       <version.h2.driver>1.3.166</version.h2.driver>
       <version.hadoop.core>1.0.3</version.hadoop.core>
       <version.hbase>0.94.1</version.hbase>
-      <version.hibernate.core>3.5.6-Final</version.hibernate.core>
+      <version.hibernate.core>4.2.2.Final</version.hibernate.core>
       <version.hibernate.annotations>${version.hibernate.core}</version.hibernate.annotations>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
       <version.hibernate.search>4.3.0.Final</version.hibernate.search>
@@ -157,6 +157,7 @@
       <version.weld>1.1.8.Final</version.weld>
       <version.xstream>1.4.1</version.xstream>
       <version.javassist>3.15.0-GA</version.javassist>
+      <version.maven.animal.sniffer>1.9</version.maven.animal.sniffer>
       <version.maven.bundle>2.3.7</version.maven.bundle>
       <version.maven.source>2.2.1</version.maven.source>
       <version.maven.scala>2.15.2</version.maven.scala>
@@ -541,19 +542,16 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${version.hibernate.core}</version>
-            <scope>provided</scope>
          </dependency>
          <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${version.hibernate.entitymanager}</version>
-            <scope>provided</scope>
-            </dependency>
+         </dependency>
          <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
             <version>${version.hibernate.annotations}</version>
-            <scope>provided</scope>
          </dependency>
          <dependency>
             <groupId>org.hibernate</groupId>
@@ -578,6 +576,11 @@
             <version>${version.hibernate.search}</version>
             <type>test-jar</type>
             <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>${version.hibernate.javax.persistence}</version>
          </dependency>
          <dependency>
             <groupId>org.jboss.arquillian</groupId>
@@ -1205,6 +1208,54 @@
          </plugins>
       </pluginManagement>
       <plugins>
+         <!-- enforce java 1.6 and maven 2.1.0 -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <version>1.0</version>
+            <executions>
+               <execution>
+                  <id>enforce-java</id>
+                  <goals>
+                     <goal>enforce</goal>
+                  </goals>
+                  <configuration>
+                     <rules>
+                        <requireJavaVersion>
+                           <version>[1.7,)</version>
+                        </requireJavaVersion>
+                        <requireMavenVersion>
+                           <version>[3.0.3,)</version>
+                        </requireMavenVersion>
+                     </rules>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>animal-sniffer-maven-plugin</artifactId>
+            <version>${version.maven.animal.sniffer}</version>
+            <configuration>
+               <signature>
+                  <groupId>org.codehaus.mojo.signature</groupId>
+                  <artifactId>java16</artifactId>
+                  <version>1.0</version>
+               </signature>
+               <ignores>
+                  <ignore>sun.misc.Unsafe</ignore>
+                  <ignore>org.apache.lucene.store.IOContext</ignore>
+               </ignores>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+         </plugin>
          <plugin>
             <artifactId>maven-remote-resources-plugin</artifactId>
             <version>1.1</version>
@@ -1463,30 +1514,6 @@
          </activation>
          <build>
             <plugins>
-               <!-- enforce java 1.6 and maven 2.1.0 -->
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-enforcer-plugin</artifactId>
-                  <version>1.0</version>
-                  <executions>
-                     <execution>
-                        <id>enforce-java</id>
-                        <goals>
-                           <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                           <rules>
-                              <requireJavaVersion>
-                                 <version>[1.6,)</version>
-                              </requireJavaVersion>
-                              <requireMavenVersion>
-                                 <version>[2.1.0,)</version>
-                              </requireMavenVersion>
-                           </rules>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
                <!-- Make sure we generate src jars too -->
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
@@ -1884,6 +1911,47 @@
                   </plugin>
                </plugins>
             </pluginManagement>
+         </build>
+      </profile>
+      
+      <profile>
+         <id>jdk6testsuite</id>
+         <activation>
+            <property>
+               <name>env.JAVA_HOME_16</name>
+            </property>
+         </activation>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <jvm>${env.JAVA_HOME_16}/bin/java</jvm>  
+                     <parallel>tests</parallel>
+                     <threadCount>${infinispan.test.parallel.threads}</threadCount>
+                     <forkCount>1</forkCount>
+                     <reuseForks>true</reuseForks>
+                     <groups>${defaultTestGroup}</groups>
+                     <systemPropertyVariables>
+                        <infinispan.test.jgroups.protocol>${infinispan.test.jgroups.protocol}</infinispan.test.jgroups.protocol>
+                        <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
+                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                        <infinispan.unsafe.allow_jdk8_chm>true</infinispan.unsafe.allow_jdk8_chm>
+                        <log4j.configuration>${log4j.configuration}</log4j.configuration>
+                     </systemPropertyVariables>
+                     <trimStackTrace>false</trimStackTrace>
+                     <properties>
+                        <property>
+                           <name>listener</name>
+                           <value>${testNGListener}</value>
+                        </property>
+                     </properties>
+                     <!-- -Dsun.nio.ch.bugLevel needed because of http://bugs.sun.com/view_bug.do?bug_id=6427854 -->
+                     <argLine>-Xmx1024m -XX:MaxPermSize=256m -Dsun.nio.ch.bugLevel</argLine>
+                  </configuration>
+               </plugin>
+            </plugins>
          </build>
       </profile>
 
